--- a/src/components/messages.css
+++ b/src/components/messages.css
@@ -1,20 +1,19 @@
-.user {
+/* .user {
     text-align: right;
     color: #000;
     margin-left: 5%;
+}*/
+
+/* .chatgp {
+    text-align: left;
 }
 
-.chatgp {
-    text-align: left;
-    color: #000;
-    margin-right: 5%;
-}
 
 .joy {
     height: 40%;
-}
+} */
 
-.odamoti {
+/* .odamoti {
     padding-bottom: -5px;
     color: aliceblue;
     border: 1px solid #fff;
@@ -22,20 +21,15 @@
     width: 60px;
     padding-left: 5px;
     background-color: rgb(255, 0, 0);
-}
+} */
 
 .odamoti_user {
     text-align: right;
-    padding-bottom: -5px;
     color: aliceblue;
-    border: 1px solid #fff;
-    border-radius: 10px;
     width: 40px;
-    background-color: rgb(131, 133, 241);
-    margin-left: 85%;
-    padding-right: 5px;
+    margin-left: 88%;
 }
-
+/*
 .chat_message {
     background-color: rgb(87, 245, 44);
     box-shadow: 5px 4px 0.5px rgb(255, 255, 255);
@@ -44,4 +38,4 @@
 .user_message {
     background-color: rgb(248, 248, 248);
     box-shadow: 5px 4px 0.5px rgb(87, 245, 44);
-}
+} */
